# email_newsletter

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: general.yml
migrations/: 20240603070802_make_status_not_null_in_subscriptions.sql  20240603071122_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: base.yaml  production.yaml
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
