[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Sjillen"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailnewsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.2"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}