[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Sjillen"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailnewsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
reqwest = "0.12.2"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = "0.14"
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]