[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Sjillen"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailnewsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[dependencies]
validator = "0.16"
unicode-segmentation = "1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
reqwest = "0.12.2"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = "0.14"
uuid = { version = "1", features = ["v4"]}
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]